usertests.c:1604:      exit(0);
usertests.c:1631:    exit(0);
usertests.c:1634:    exit(0);
usertests.c:1640:    exit(0);
usertests.c:1719:    exit(0);
usertests.c:1722:    exit(0);
usertests.c:1734:    exit(0);
usertests.c:1756:    exit(0);
usertests.c:1803:  exit(0);
cat.c:15:      exit(0);
cat.c:20:    exit(0);
cat.c:31:    exit(0);
cat.c:37:      exit(0);
cat.c:42:  exit(0);
mkdir.c:12:    exit(0);
mkdir.c:22:  exit(0);
wc.c:30:    exit(0);
wc.c:42:    exit(0);
wc.c:48:      exit(0);
wc.c:53:  exit(0);
mytest.c:22:	 exit(0);
mytest.c:39:      exit(0);
mytest.c:74:      exit(0);}}
kill.c:12:    exit(0);
kill.c:16:  exit(0);
grep.c:46:    exit(0);
grep.c:52:    exit(0);
grep.c:58:      exit(0);
grep.c:63:  exit(0);
mkfs.c:167:  exit(0);
forktest.c:30:      exit(0);
forktest.c:35:    exit(0);
forktest.c:41:      exit(0);
forktest.c:47:    exit(0);
forktest.c:57:  exit(0);
trap.c:41:      exit(0);
trap.c:45:      exit(0);
trap.c:101:    exit(0);
trap.c:111:    exit(0);
init.c:35:    while((wpid=wait(NULL)) >= 0 && wpid != pid)
stressfs.c:47:  wait(NULL);
sh.c:97:    wait(NULL);
sh.c:121:    wait(NULL);
sh.c:122:    wait(NULL);
sh.c:170:    wait(NULL);
usertests.c:70:  wait(NULL);
usertests.c:113:  wait(NULL);
usertests.c:350:    wait(NULL);
usertests.c:398:  wait(NULL);
usertests.c:399:  wait(NULL);
usertests.c:400:  wait(NULL);
usertests.c:417:      if(wait(NULL) != pid){
usertests.c:457:    wait(NULL);
usertests.c:490:    wait(NULL);
usertests.c:556:    wait(NULL);
usertests.c:624:    wait(NULL);
usertests.c:798:      wait(NULL);
usertests.c:850:      wait(NULL);
usertests.c:885:    wait(NULL);
usertests.c:1401:    if(wait(NULL) < 0){
usertests.c:1407:  if(wait(NULL) != -1){
usertests.c:1450:  wait(NULL);
usertests.c:1510:    wait(NULL);
usertests.c:1537:    wait(NULL);
usertests.c:1581:    wait(NULL);
usertests.c:1636:  wait(NULL);
usertests.c:1724:  wait(NULL);
forktest.c:39:    if(wait(NULL) < 0){
forktest.c:45:  if(wait(NULL) != -1){